src/objects/OneDSTermsAndConditionsSetting__mdt.object
<CustomObject>
    <description>Localization settings for the OneDS Terms and Conditions public site.</description>
    <fields>
        <fullName>ConsentStatement__c</fullName>
        <description>Consent statement in localized language</description>
        <label>ConsentStatement</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country matching Contact.Country__c value</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentPublicLink__c</fullName>
        <description>Public link to the Terms and Conditions document</description>
        <label>DocumentPublicLink</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InfoText__c</fullName>
        <description>Info text in locaized language</description>
        <label>InfoText</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelConsent__c</fullName>
        <description>Consent label in localized language</description>
        <label>LabelConsent</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelEmail__c</fullName>
        <description>Label for the Email field</description>
        <label>LabelEmail</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelFirstName__c</fullName>
        <description>Label for the First Name field</description>
        <label>LabelFirstName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelLastName__c</fullName>
        <description>Label for the Last Name field</description>
        <label>LabelLastName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelPaymentPreference__c</fullName>
        <description>TFUS-000002998</description>
        <label>Label Payment Preference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelPracticeName__c</fullName>
        <description>Label for the Practice Name field</description>
        <label>LabelPracticeName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelSubmit__c</fullName>
        <description>Submit label in localized language</description>
        <label>LabelSubmit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelTermsAndConditions__c</fullName>
        <description>Label for Terms and Conditions Link in localized language</description>
        <label>LabelTermsAndConditions</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language matching Contact.Preferred_Language__c value</description>
        <label>Language</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <description>TFUS-000002698 Used in OneDsCanadaTermsAndConditions_CC to find relevant mtd record in SOQL query by matching `LoyaltyProgramParticipant__c.LoyaltyProgram__r.Name`</description>
        <label>Program Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuccessMessage__c</fullName>
        <description>Success Message in localized language</description>
        <label>SuccessMessage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title in localized language</description>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OneDS Terms and Conditions Setting</label>
    <pluralLabel>OneDS Terms and Conditions Settings</pluralLabel>
</CustomObject>